feat: Add WaystoneTeleportEvent to allow mods to hook into teleportation